5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1826_1650.log
== TEST (2019-06-12 18:28:12) 
-- CODE:
from numpy import*

var = array(eval(input("cor: "))).split(',').upper()
a = 0
c = zeros(5, dtype=int)
	for i in var:
		if var[i] == "P":
			c[0] = c[0] + 1
		elif var[i] == "C":
			c[1] = c[1] + 1
		elif var[i] == "R":
			c[2] = c[2] + 1
		elif var[i] == "L":
			c[3] = c[3] + 1
		elif var[i] == "B":
			c[4] = c[4] + 1
		a = a + 1
		print(a)
	
-- ERROR:
File "XXXX", line 6
    for i in var:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:11) 
-- CODE:
from numpy import*

var = array(eval(input("cor: "))).split(',').upper()
a = 0
c = zeros(5, dtype=int)
	for i in arange(var):
		if var[i] == "P":
			c[0] = c[0] + 1
		elif var[i] == "C":
			c[1] = c[1] + 1
		elif var[i] == "R":
			c[2] = c[2] + 1
		elif var[i] == "L":
			c[3] = c[3] + 1
		elif var[i] == "B":
			c[4] = c[4] + 1
		a = a + 1
		print(a)
	
-- ERROR:
File "XXXX", line 6
    for i in arange(var):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:29:41) 
-- CODE:
from numpy import*

var = array(eval(input("cor: "))).split(',').upper()
a = 0
c = zeros(5, dtype=int)
for i in arange(var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:30:38) 
-- CODE:
from numpy import*

var = array(input("cor: ")).split(',').upper()
a = 0
c = zeros(5, dtype=int)
for i in arange(var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:31:16) 
-- CODE:
from numpy.ndarray import*

var = array(input("cor: ")).split(',').upper()
a = 0
c = zeros(5, dtype=int)
for i in arange(var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.ndarray import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:32:12) 
-- CODE:
from numpy import*

var = array(eval(input("cor: "))).upper().split(',')
a = 0
c = zeros(5, dtype=int)
for i in arange(var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:32:51) 
-- CODE:
from numpy import*

var = array(eval(input("cor: "))).upper().split(',')
a = 0
c = zeros(5, dtype=int)
for i in arange(var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:33:07) 
-- CODE:
from numpy import*

var = array(eval(input("cor: ")))
a = 0
c = zeros(5, dtype=int)
for i in arange(var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:33:34) 
-- CODE:
from numpy import*

var = array(eval(input("cor: ")))
a = 0
c = zeros(5, dtype=int)
for i in arange(var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:35:10) 
-- CODE:
from numpy import*

var = array(eval(input("cor: ").split(',')))
a = 0
c = zeros(5, dtype=int)
for i in arange(var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:35:36) 
-- CODE:
from numpy import*

var = array(input("cor: ").split(','))
a = 0
c = zeros(5, dtype=int)
for i in arange(var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:36:02) 
-- CODE:
from numpy import*

var = array(input("cor: ").split(','))
a = 0
c = zeros(5, dtype=int)
for i in (var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:36:20) 
-- CODE:
from numpy import*

var = array(input("cor: ").split(','))
a = 0
c = zeros(5, dtype=int)
for i in (var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:37:26) 
-- CODE:
from numpy import*

var = array(input("cor: ").split(','))
a = 0
c = zeros(5, dtype=int)
for i in (var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:38:23) 
-- CODE:
from numpy import*

var = (input("cor: ").split(','))
vet = array(var)
a = 0
c = zeros(5, dtype=int)
for i in (var):
	if var[i] == "P":
		c[0] = c[0] + 1
	elif var[i] == "C":
		c[1] = c[1] + 1
	elif var[i] == "R":
		c[2] = c[2] + 1
	elif var[i] == "L":
		c[3] = c[3] + 1
	elif var[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:39:09) 
-- CODE:
from numpy import*

var = (input("cor: ").split(','))
vet = array(var)
a = 0
c = zeros(5, dtype=int)
for i in (vet):
	if vet[i] == "P":
		c[0] = c[0] + 1
	elif vet[i] == "C":
		c[1] = c[1] + 1
	elif vet[i] == "R":
		c[2] = c[2] + 1
	elif vet[i] == "L":
		c[3] = c[3] + 1
	elif vet[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:39:33) 
-- CODE:
from numpy import*

var = (input("cor: ").split(','))
vet = array(var)
a = 0
c = zeros(5, dtype=int)
for i in (vet):
	if vet[i] == "P":
		c[0] = c[0] + 1
	elif vet[i] == "C":
		c[1] = c[1] + 1
	elif vet[i] == "R":
		c[2] = c[2] + 1
	elif vet[i] == "L":
		c[3] = c[3] + 1
	elif vet[i] == "B":
		c[4] = c[4] + 1
	a = a + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
